--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "trackAppDBCon": "Server=tcp:trackappserver.database.windows.net,1433;Initial Catalog=trackappDB;Persist Security Info=False;User ID=trackappadmin;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "trackAppDBCon": "Host=localhost;Port=5623;Database=trackdb;Username=trackdb"
   }
 }
